# TradingAISystem

./: .gitignore  CMakeLists.txt  Portfolio.cpp  main.cpp
cpp_engine/: CMakeLists.txt  Order.h  Portfolio.cpp  Portfolio.h  SignalReceiver.cpp  SignalReceiver.h  main.cpp  tests.cpp  tests.h
